--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -4,4 +4,8 @@
   <welcome-file-list>
     <welcome-file>login</welcome-file>
   </welcome-file-list>
+  <servlet-mapping>
+  <servlet-name>default</servlet-name>
+    	<url-pattern>/styles/*</url-pattern>
+  </servlet-mapping>
 </web-app>
