--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -8,4 +8,7 @@
   <servlet-name>default</servlet-name>
     	<url-pattern>/styles/*</url-pattern>
   </servlet-mapping>
+  <session-config>
+     <session-timeout>30</session-timeout>
+  </session-config>
 </web-app>
